codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__active_turn_elapsed_time_uses_timer_style.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: "format!(\"text:              {text}\\ntimer_background: {timer_background_cells}\")"
---
text:              ╰──────────gpt-5.6-terra─medium─fast─5s╯
timer_background:            ^^^^^^^^^^^^^ ^^^^^^ ^^^^ ^^
